# simple-typescript-compiler

./: CMakeLists.txt  README.md
docs/: build.bat  report.docx  report.html  report.md  Описание.md  Отчет.docx  Отчет.md
docs/scripts/: build.ps1
docs/templates/: template.docx
src/: clipp.h  console-color.hpp  main.cpp
src/ICM/: icm.h
src/analyzer/: Analyzer.h  baseBlock.h
src/compiler/: compiler.h
src/errorHandle/: errorHandle.cpp  errorHandle.h
src/lexer/: Lexer.cpp  Lexer.h  Lexer2.h  lexer.cpp  lexer.h
src/lexer/token/: Position.h  Token.cpp  Token.h  TokenType.h  token.cpp  token.h
src/parser/: Parser.cpp  Parser.h  parser.cpp  parser.h
src/parser/array/: Array.cpp  Array.h  array.cpp  array.h
src/parser/asm/: AsmGeneralBlocks.cpp  asm.cpp  asm.h  asmConstants.h  asm_constants.h  assembler.cpp  assembler.h
src/parser/ast/: Ast.cpp  Ast.h  AstChecks.cpp  AstClasses.cpp  AstExports.cpp  AstExpressionType.cpp  AstImports.cpp  AstMark.cpp  AstPrint.cpp  AstReplace.cpp  AstUtils.cpp  AstVariables.cpp  ast.cpp  ast.h
src/parser/ast/exportTable/: ExportTable.h
src/parser/class/: Class.h  ClassTable.cpp  ClassTable.h
src/parser/function/: Function.cpp  Function.h  FunctionTable.cpp  FunctionTable.h  GlobalFunctions.cpp  GlobalFunctions.h  func.cpp  func.h  function.cpp  function.h  function_table.cpp  function_table.h  global_functions.cpp  global_functions.h
src/parser/initializer/: initializer.h
src/parser/interface/: InterfaceTable.cpp  InterfaceTable.h  interface.h
src/parser/node/: Node.cpp  Node.h  NodeType.h  node.cpp  node.h
src/parser/node/node2/: Node.h
src/parser/node/node2/stmt/: if.h  ifElse.h
src/parser/other/: other.h
src/parser/types/: genericType.cpp  genericType.h  types.h
src/parser/variable/: Variable.cpp  Variable.h  VariableTable.cpp  VariableTable.h  variable.cpp  variable.h  variable_table.cpp  variable_table.h
src/parser/variable/type/: GenericType.cpp  GenericType.h  Type.h
src/report/: report.cpp  report.h  reports.h
src/utils/: utils.h
testPrograms/: 1.bat  factorial.asm  factorial.ts  flow.asm  flow.ts  functions_on_asm.asm  log.txt  log1.txt  loggg.txt  main.asm  main.ts  qe.asm  qe.ts  sorts.ts  stringTest.ts  test.asm
testPrograms/develop/: test.asm
testPrograms/lib/: array.ts  io.ts  math.ts  sorts.ts  string.ts
test_programs/: 1.ts  2.ts  bubble_sort.ts  classes.ts  factorial.asm  factorial.ts  merge-sort.ts  quadratic-equation.ts  quick_recursive.ts  quick_recursive_2.ts
